# c-quadratic-equation

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp
lib/: CMakeLists.txt  quadratic-equation-solver.cpp  quadratic-equation-solver.h
test/: CMakeLists.txt  quadratic-equation-tests.cpp  test-framework.h
